# variationalMC

./: .gitignore  CMakeLists.txt  LICENSE  Lai_CSL.cpp  Lattice.cpp  Lattice.h  MeanFieldAnsatz.cpp  MeanFieldAnsatz.h  MemTimeTester.h  ProjectedState.cpp  ProjectedState.h  README.md  RandomEngine.h  SpinModel.h  VariationalMonteCarlo.cpp  VariationalMonteCarlo.h  Wavefunction.cpp  Wavefunction.h  git.txt  index.md  oneAPI_notes.md  vmc_io.cpp  vmc_io.h  vmctype.cpp  vmctype.h
examples/1d/trivial/: lattice.json  model.json  vmc.json  wavefunction.json
examples/spin_half/1d/trivial/: model.json  wavefunction.json
input/: create_input.py  csl_2pi3.json  csl_pi2.json  csl_pi3.json  csl_pi4.json  diamond_lattice_neel.json  mc.slurm  square_lattice_column.json  square_lattice_neel.json  triangle_fq.json  triangle_pi_flux.json  triangle_trimer.json  triangle_uRVB.json
input/kagome_su3/: csl_2pi3.json  csl_pi3.json  pi_flux.json  pi_flux_hex.json  stagger_flux.json
projects/: Lai_CSL.cpp  kagome_su3.cpp  square_lattice.cpp
run/: csl_pi3.json  mc.slurm
run/data/: neighbors.txt  rings.txt
src/: CMakeLists.txt  Lattice.cpp  Lattice.h  MeanFieldAnsatz.cpp  MeanFieldAnsatz.h  MemTimeTester.h  ProjectedState.cpp  ProjectedState.h  RandomEngine.h  SpinModel.h  VariationalMonteCarlo.cpp  VariationalMonteCarlo.h  Wavefunction.cpp  Wavefunction.h  example.cpp  latticex.cpp  main.cpp  model_and_calculation_helper.cpp  model_and_calculation_helper.h  test_main.cpp  vmc_io.cpp  vmc_io.h  vmc_numerical.cpp  vmc_numerical.h  vmctype.cpp  vmctype.h
src/test/: CMakeLists.txt  google_test.cpp
visualization/: plot_optimization.m
